DTSAM-353 add civil_wa_1_5 employment judge appt